--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 INFORME/informe.aux
 INFORME/informe.bbl
+INFORME/informe.blg
+INFORME/informe.lof
 INFORME/informe.fdb_latexmk
 INFORME/informe.fls
 INFORME/informe.log
@@ -9,5 +11,10 @@ INFORME/informe.synctex.gz
 INFORME/informe.toc
 INFORME/build
 INFORME/cap_1.aux
+INFORME/cap_2.aux
+INFORME/cap_3.aux
+INFORME/cap_4.aux
+INFORME/cap_5.aux
+
 
 
